@@ -5,17 +5,17 @@
 ## X-Author-Server: Llane US
 ## X-Author-Faction: Alliance
 ## X-Email: psvander AT gmail DOT com
-## Version: Alpha 0.28
+## Version: Alpha 0.29
 ## X-Category: Raid, Party, Healer, Priest, Shaman, Paladin, Druid
 ## SavedVariables: SmartRes2DB
-## X-Localizations: enUS, frFR
-## X-Credits: frFR translation by Xilbar and ckeurk
+## X-Localizations: enUS, frFR, deDE
+## X-Credits: frFR Xilbar/ckeurk, deDE Farook/Black_Mystics
 ## X-Website: http://www.wowace.com/addons/smartres2/
 
 ## OptionalDeps: Ace3, LibResComm-1.0, LibSharedMedia-3.0, LibBars-1.0, LibAboutPanel, AceGUI-3.0-SharedMediaWidgets
 
 Libs\LibStub\LibStub.lua
-Libs\CallbackHandler-1.0\CallbackHandler.xml
+Libs\CallbackHandler-1.0\CallbackHandler-1.0.xml
 
 Libs\AceAddon-3.0\AceAddon-3.0.xml
 Libs\AceGUI-3.0\AceGUI-3.0.xml
@@ -23,15 +23,17 @@ Libs\AceConfig-3.0\AceConfig-3.0.xml
 Libs\AceConsole-3.0\AceConsole-3.0.xml
 Libs\AceDB-3.0\AceDB-3.0.xml
 Libs\AceEvent-3.0\AceEvent-3.0.xml
-Libs\AceGUI-3.0-SharedMediaWidgets\widget.xml
+Libs\AceLocale-3.0\AceLocale-3.0.xml
 
 Libs\LibBars-1.0\lib.xml
 Libs\LibSharedMedia-3.0\lib.xml
 Libs\LibResComm-1.0\lib.xml
 Libs\LibAboutPanel\lib.xml
+Libs\AceGUI-3.0-SharedMediaWidgets\widget.xml
 
 Libs\LibDataBroker-1.1\LibDataBroker-1.1.lua
 
 Locales\Localization.frFR.lua
+Locales\Localization.deDE.lua
 Locales\Localization.enUS.lua
 SmartRes2.lua
